# dpolaris_ai

./: .gitignore  AUDIT_dPolaris_ai.md  README.md  __init__.py  bootstrap_env.sh  pyproject.toml  requirements-windows.txt  requirements.txt
ai/: __init__.py  scheduler.py
analysis/: __init__.py  artifacts.py  pipeline.py
api/: __init__.py  server.py
backtest/: __init__.py  engine.py  reporting.py
cli/: __init__.py  main.py
cloud/: __init__.py  supabase_sync.py
core/: __init__.py  ai.py  claude_cli.py  config.py  database.py  device.py  llm_provider.py  memory.py
daemon/: __init__.py  backend_control.py  backend_process.py  orchestrator.py  scheduler.py
data/: __init__.py  alignment.py  dataset_builder.py  quality.py  schema.py
docs/: prediction_precision_plan.md  training_artifact_spec.md
events/: __init__.py  earnings_calendar.py
features/: __init__.py  fundamentals.py  macro.py  registry.py  sentiment.py  technical.py
ml/: __init__.py  deep_learning.py  deep_learning_worker.py  device.py  evaluation.py  features.py  precision_config.py  prediction_inspector.py  predictor.py  trainer.py  trainer_precision.py  training_artifacts.py  validation.py
monitoring/: __init__.py  drift.py
news/: __init__.py  providers.py  sentiment.py
regime/: __init__.py  regime_classifier.py
registry/: __init__.py  model_registry.py
reports/: data_quality_20260214_160849.json  data_quality_20260214_215014.json  data_quality_20260214_215736.json  data_quality_20260214_215938.json  data_quality_20260215_041524.json  weekly_review_2026-02-10.md
risk/: __init__.py  (+1 more)
(+118 files in other folders)
